--- a/about.html
+++ b/about.html
@@ -138,10 +138,10 @@
 						<div class="page-header">
 							<h3>GGSIPU</h3>
 						</div>
-						<a href="//www.ipu.ac.in" target="_blank"><img class="img-responsive" src="images/ipu_logo.png"></a>
+						<a href="//www.ipu.ac.in" target="_blank"><img class="img-responsive" src="images/ipu_logo.png"/></a>
 						<p>Guru Gobind Singh Indraprastha University, 'A' Grade accreditation by NAAC, established by Government of NCT of Delhi under the provisions of Guru Gobind Singh Indraprastha University Act, 1998 read with its Amendment in 1999.</p>
 					</div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="page-header">
 							<h3>Get in touch</h3>
 						</div>
@@ -164,7 +164,7 @@
 							<li><a href="http://www.ipu.ac.in" target="_blank">GGSIPU</a></li>
 						</ul>
 					</div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="page-header">
 							<h3>Follow us</h3>
 						</div>
