--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
 	<script src="js/modernizr.custom.js"></script>
 </head><!--/head-->
 
-<body data-spy="scroll" data-target=".scrollspy" data-offset="148">
+<body data-spy="scroll" data-target="#scrollspy" data-offset="148">
 
 <div id="wrap">
 
@@ -54,7 +54,7 @@
 			                	<img class="img-responsive" src="images/logo_nav.png" alt="logo">
 			                </a>                    
 			            </div>
-			            <div class="collapse navbar-collapse scrollspy">
+			            <div class="collapse navbar-collapse">
 			                <ul class="nav navbar-nav navbar-right">                 
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
@@ -92,7 +92,7 @@
 		<div class="container-fluid">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-3 col-xs-12 scrollspy hidden-xs ">
+					<div class="col-sm-3 col-xs-12 hidden-xs" id="scrollspy">
 						<ul class="nav nav-pills nav-stacked toAffix" data-spy="affix">
 							<li class="active"><a href="#startup" data-toggle="tab">Startup Bootcamp</a></li>
 							<li><a href="#python" data-toggle="tab">Python 101</a></li>
@@ -207,7 +207,7 @@
 						<a href="//www.ipu.ac.in" target="_blank"><img class="img-responsive" src="images/ipu_logo.png"></a>
 						<p>Guru Gobind Singh Indraprastha University, 'A' Grade accreditation by NAAC, established by Government of NCT of Delhi under the provisions of Guru Gobind Singh Indraprastha University Act, 1998 read with its Amendment in 1999.</p>
 					</div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="page-header">
 							<h3>Get in touch</h3>
 						</div>
@@ -230,7 +230,7 @@
 							<li><a href="http://www.ipu.ac.in" target="_blank">GGSIPU</a></li>
 						</ul>
 					</div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="page-header">
 							<h3>Follow us</h3>
 						</div>
