--- a/about.html
+++ b/about.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="IEEE USICT GGSIPU">
     <meta name="author" content="Shubham Jain">
-    <title>IEEE GGSIPU Student Branch</title>
+    <title>IEEE USICT Student Branch</title>
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Oswald:400,300,700|Raleway:400,100,200,300,600,500,700,800,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/color.css" rel="stylesheet">
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52837695-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	
 </head><!--/head-->
 
@@ -59,7 +69,7 @@
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="#aboutieee">About IEEE</a></li>
-										<li><a href="#aboutsb">About IEEE GGSIPU</a></li>
+										<li><a href="#aboutsb">About IEEE USICT</a></li>
 										<li><a href="#vision">Our Vision</a></li>
 										<li><a href="#benefits">Benefits</a></li>
 									</ul>
@@ -78,8 +88,9 @@
 										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
-			                    <li><a href="join.html">Join us</a></li>       
-			                    <li><a href="contact.html">Contact</a></li>       
+			                    <li><a href="join.html">Join us</a></li> 
+			                    <li><a href="contact.html">Contact us</a></li>       
+			                           
 			                </ul>
 			            </div>
 			        </div>
@@ -95,7 +106,7 @@
 					<div class="col-sm-3 scrollspy">
 						<ul class="nav nav-pills nav-stacked hidden-xs toAffix" data-spy="affix">
 							<li class="active"><a href="#aboutieee">About IEEE</a></li>
-							<li><a href="#aboutsb">About IEEE GGSIPU</a></li>
+							<li><a href="#aboutsb">About IEEE USICT</a></li>
 							<li><a href="#vision">Our Vision</a></li>
 							<li><a href="#benefits">Benefits</a></li>
 						</ul>
@@ -115,15 +126,47 @@
 							<div class="hr"></div>
 						</section>
 						<section class="content" id="aboutsb">
-							<div class="page-header"><h3>About IEEE GGSIPU</h3></div>
+							<div class="page-header"><h3>About IEEE USICT</h3></div>
+							<p>IEEE USICT has come a long way since its inception. Providing a plethora of opportunities to its members, it has emerged as one of the most significant platforms for students to not only showcase their skills and satiate their appetite for technical events but also enthuse within themselves healthy competition and team spirit. </p>
+							<p>IEEE USICT family has grown from strength to strength in the past few years. Not only have we been able to make our presence felt in the technical fraternity in our region, but have also been making a significant and conscious effort to make contributions towards the society.</p>
+							<p>To let our members have a global scale technical experience, we encourage students to participate in various IEEE organized competitions like IEEEXtreme and meets like "All India Student Congress".</p>
 							<div class="hr"></div>
 						</section>
 						<section class="content" id="vision">
 							<div class="page-header"><h3>Our Vision</h3></div>
+								<p>Be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of technical professionals in improving global conditions.</p>
 							<div class="hr"></div>
 						</section>
 						<section class="content" id="benefits">
 							<div class="page-header"><h3>Benefits</h3></div>
+							<h4>Trusted Voice<br><small>Staying current with the fast-changing world of technology</small></h4>
+								<dl class="dl-horizontal">
+									<dt>myIEEE</dt><dd>a one-stop personalized Web portal providing IEEE members with convenient access to IEEE’s member benefits and account management</dd>
+									<dt>IEEE.tv™</dt><dd>Internet television offering exclusive programming about technology and engineering to IEEE members, and accessible from myIEEE</dd>
+									<dt>IEEE memberNet</dt><dd>an online search and networking tool that enables members to connect with technical and engineering experts worldwide</dd>
+									<dt>IEEE Spectrum</dt><dd>the IEEE flagship magazine, 12 monthly issues (print) and online, digital delivery </dd>
+									<dt>IEEE Xplore</dt><dd>table-of-content and abstract access to over 2 million documents</dd>
+									<dt>Microsoft® software</dt><dd>The IEEE, in conjunction with Microsoft, offers a wide selection of development software to IEEE Student members. All new IEEE Student members and those students that renew will qualify for free Microsoft software.</dd>
+								</dl>
+							<h4>Global Community<br><small>Belong to the network and buying power of 382,000 members in 150 countries</small></h4>
+								<dl class="dl-horizontal">
+									<dt>IEEE Sections</dt><dd>network with others in the local member community and participate in local educational events</dd>
+									<dt>Technical Chapters</dt><dd>engage with others through informative technical meetings</dd>
+									<dt>Student Branches</dt><dd>opportunities to network with student members at universities and colleges</dd>
+									<dt>IEEE e-mail alias</dt><dd>with virus protection and spam filtering</dd>
+									<dt>ShopIEEE discounts</dt><dd>membership can pay for itself, with as much as 50% off IEEE products</dd>
+									<dt>IEEE Conference</dt><dd>registration discounts</dd>
+									<dt>Volunteering</dt><dd>opportunities that build leadership skills and networking opportunities</dd>
+								</dl>
+							<h4>Profession<br><small>Empowering members to build and own their careers, and venues to give back to society</small></h4>
+								<dl class="dl-horizontal">
+									<dt>IEEE Job Site</dt><dd>locate career opportunities easily and confidentially</dd>
+									<dt>IEEE Mentoring Connection</dt><dd>available to members after graduation, this online tool matches young IEEE members seeking professional guidance and counseling with veteran IEEE members willing to share their knowledge and life experiences</dd>
+									<dt>Career Alert</dt><dd>a weekly e-mail newsletter containing career advice plus the job of the week from the IEEE Job Site</dd>
+									<dt>Awards</dt><dd>recognize the accomplishments of technologists and engineers worldwide</dd>
+									<dt>Scholarships</dt><dd>enhance your resume with an IEEE scholarship</dd>
+									<dt>Consultants Database</dt><dd>a service available for matching technical consultants with clients</dd>
+								</dl>
 							<div class="hr"></div>
 						</section>
 					</div>
@@ -146,7 +189,7 @@
 							<h3>Get in touch</h3>
 						</div>
 						<address>
-						  <strong>IEEE GGSIPU</strong><br>
+						  <strong>IEEE USICT</strong><br>
 						 Guru Gobind Singh Indraprastha University<br>
 						 Sector - 16C Dwarka<br>
 						 Delhi - 110078, India<br>
@@ -177,9 +220,9 @@
 				<hr>	
 				<div class="row">
 					<ul class="list-inline">
-						<li><a href="">Home</a></li>|
-						<li><a href="">Sitemap</a></li>|
-						<li><a href="">Contact</a></li>
+						<li><a href="index.html">Home</a></li>|
+						<li><a href="sitemap.html">Sitemap</a></li>|
+						<li><a href="contact.html">Contact us</a></li>
 						<li class="pull-right">Designed and Developed by <a href="http://www.shubhamja.in" target="_blank">Shubham Jain</a></li>
 					</ul>
 					
