--- a/join.html
+++ b/join.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="IEEE USICT GGSIPU">
     <meta name="author" content="Shubham Jain">
-    <title>IEEE GGSIPU Student Branch</title>
+    <title>IEEE USICT Student Branch</title>
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Oswald:400,300,700|Raleway:400,100,200,300,600,500,700,800,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/color.css" rel="stylesheet">
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52837695-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	
 </head><!--/head-->
 
@@ -59,7 +69,7 @@
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="about.html">About IEEE</a></li>
-										<li><a href="about.html#aboutsb">About IEEE GGSIPU</a></li>
+										<li><a href="about.html#aboutsb">About IEEE USICT</a></li>
 										<li><a href="about.html#vision">Our Vision</a></li>
 										<li><a href="about.html#benefits">Benefits</a></li>
 									</ul>
@@ -79,7 +89,8 @@
 									</ul>
 								</li>
 			                    <li class="active"><a href="join.html">Join us</a></li>       
-			                    <li><a href="contact.html">Contact</a></li>       
+			                    <li><a href="contact.html">Contact us</a></li>       
+			                           
 			                </ul>
 			            </div>
 			        </div>
@@ -123,7 +134,7 @@
 							<h3>Get in touch</h3>
 						</div>
 						<address>
-						  <strong>IEEE GGSIPU</strong><br>
+						  <strong>IEEE USICT</strong><br>
 						 Guru Gobind Singh Indraprastha University<br>
 						 Sector - 16C Dwarka<br>
 						 Delhi - 110078, India<br>
@@ -154,9 +165,9 @@
 				<hr>	
 				<div class="row">
 					<ul class="list-inline">
-						<li><a href="">Home</a></li>|
-						<li><a href="">Sitemap</a></li>|
-						<li><a href="">Contact</a></li>
+						<li><a href="index.html">Home</a></li>|
+						<li><a href="sitemap.html">Sitemap</a></li>|
+						<li><a href="contact.html">Contact us</a></li>
 						<li class="pull-right">Designed and Developed by <a href="http://www.shubhamja.in" target="_blank">Shubham Jain</a></li>
 					</ul>
 					
