--- a/office.html
+++ b/office.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="IEEE USICT GGSIPU">
     <meta name="author" content="Shubham Jain">
-    <title>IEEE GGSIPU Student Branch</title>
+    <title>IEEE USICT Student Branch</title>
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Oswald:400,300,700|Raleway:400,100,200,300,600,500,700,800,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/color.css" rel="stylesheet">
 	<script src="js/modernizr.custom.js"></script>
-</head><!--/head-->
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52837695-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
 
 <body data-spy="scroll" data-target=".scrollspy" data-offset="148">
 <div id="wrap">
@@ -59,7 +69,7 @@
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="about.html">About IEEE</a></li>
-										<li><a href="about.html#aboutsb">About IEEE GGSIPU</a></li>
+										<li><a href="about.html#aboutsb">About IEEE USICT</a></li>
 										<li><a href="about.html#vision">Our Vision</a></li>
 										<li><a href="about.html#benefits">Benefits</a></li>
 									</ul>
@@ -78,8 +88,9 @@
 										<li><a href="#201314" data-toggle="tab">Execom 2013-14</a></li>
 									</ul>
 								</li>
-			                    <li><a href="join.html">Join us</a></li>       
-			                    <li><a href="contact.html">Contact</a></li>       
+			                    <li><a href="join.html">Join us</a></li> 
+			                    <li><a href="contact.html">Contact us</a></li> 
+
 			                </ul>
 			            </div>
 			        </div>
@@ -103,10 +114,10 @@
 							<section class="tab-pane fade in active" id="201415">
 								<div class="page-header"><h3>Executive Committee 2014-2015</h3></div>
 								<div>
-									<ul class="grid">
+									<ul class="grid cs-style-6">
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/counsellor-2014.jpg" alt="img02">
 												<figcaption>
 													<h3>Branch Counsellor</h3>
 													<span>Mr. Ashish Payal</span>
@@ -115,7 +126,7 @@
 										</li><br>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/kunal-krishna-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Branch Mentor</h3>
 													<span>Kunal Krishna</span>
@@ -124,7 +135,7 @@
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/himanshu-garg-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Chairperson</h3>
 													<span>Himanshu Garg</span>
@@ -133,7 +144,7 @@
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/pranav-kumar2-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Vice Chair</h3>
 													<span>Pranav Kumar</span>
@@ -149,7 +160,7 @@
 												</figcaption>
 											</figure>
 										</li>
-										<li>
+										<!-- <li>
 											<figure>
 												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
@@ -157,11 +168,11 @@
 													<span>Ishan Sain</span>
 												</figcaption>
 											</figure>
-										</li><br>
+										</li> --><br>
 										<h2>HR Team</h2>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/akshay-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>HR - Head</h3>
 													<span>Akshay Khusu</span>
@@ -170,7 +181,7 @@
 										</li><br>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/aman-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>HR - Coordinator</h3>
 													<span>Aman Gupta</span>
@@ -179,7 +190,7 @@
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/tushar-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>HR - Coordinator</h3>
 													<span>Tushar Khurana</span>
@@ -188,7 +199,7 @@
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/rohan-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>HR - Coordinator</h3>
 													<span>Rohan Banga</span>
@@ -198,25 +209,25 @@
 										<h2>Tech Team</h2>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/siddharth-verma-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Tech Head</h3>
 													<span>Siddharth Verma</span>
 												</figcaption>
 											</figure>
 										</li>
-										<li>
+										<!-- <li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/rajat-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Tech Coordinator</h3>
 													<span>Rajat Arora</span>
 												</figcaption>
 											</figure>
-										</li>
+										</li> -->
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/harshit-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Tech Coordinator</h3>
 													<span>Harshit Dwivedi</span>
@@ -225,22 +236,22 @@
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/raghav-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Tech Coordinator</h3>
 													<span>Raghav Chhabra</span>
 												</figcaption>
 											</figure>
 										</li>
-										<li>
+										<!-- <li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/ujjwal-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Tech Coordinator</h3>
 													<span>Ujjwal Bhargava</span>
 												</figcaption>
 											</figure>
-										</li>
+										</li> -->
 										<h2>Web Team</h2>
 										<li>
 											<figure>
@@ -253,7 +264,7 @@
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/rahul-ggsipu.jpg" alt="img02">
 												<figcaption>
 													<h3>Web - Coordinator</h3>
 													<span>Rahul Goel</span>
@@ -267,10 +278,10 @@
 							<section class="tab-pane fade in" id="201314" role="tabpanel" aria-labelledBy="201314-tab">
 								<div class="page-header"><h3>Executive Committee 2013-2014</h3></div>
 								<div>
-									<ul class="grid">
+									<ul class="grid cs-style-6">
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/udayan-ghose-ggsipu.jpg" alt="Dr. Udayan Ghose">
+												<img class="img-responsive" src="images/execom/counsellor-2013.jpg" alt="Dr. Udayan Ghose">
 												<figcaption>
 													<h3>Branch Counsellor</h3>
 													<span>Dr. Udayan Ghose</span>
@@ -349,7 +360,7 @@
 							<h3>Get in touch</h3>
 						</div>
 						<address>
-						  <strong>IEEE GGSIPU</strong><br>
+						  <strong>IEEE USICT</strong><br>
 						 Guru Gobind Singh Indraprastha University<br>
 						 Sector - 16C Dwarka<br>
 						 Delhi - 110078, India<br>
@@ -380,9 +391,9 @@
 				<hr>	
 				<div class="row">
 					<ul class="list-inline">
-						<li><a href="">Home</a></li>|
-						<li><a href="">Sitemap</a></li>|
-						<li><a href="">Contact</a></li>
+						<li><a href="index.html">Home</a></li>|
+						<li><a href="sitemap.html">Sitemap</a></li>|
+						<li><a href="contact.html">Contact us</a></li>
 						<li class="pull-right">Designed and Developed by <a href="http://www.shubhamja.in" target="_blank">Shubham Jain</a></li>
 					</ul>
 					
@@ -394,12 +405,12 @@
 <!-- SCRIPTS -->
 	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-	    <!-- // <script type="text/javascript" src="js/jquery.lazyload.min.js"></script> -->
+	    <script src="js/modernizr.custom.js"></script>
+	    <script type="text/javascript" src="js/jquery.lazyload.min.js"></script>
 		<script type="text/javascript" src="js/custom.js"></script>
 		<script src="js/toucheffects.js"></script>
 
-		 <script>
-		 // $("img.lazy").lazyload();
+		<script>
 		$(function () {
 		   var activeTab = $('[href=' + location.hash + ']');
 		   activeTab && activeTab.tab('show');
