--- a/techveda.html
+++ b/techveda.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="IEEE USICT GGSIPU">
     <meta name="author" content="Shubham Jain">
-    <title>IEEE GGSIPU Student Branch</title>
+    <title>IEEE USICT Student Branch</title>
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Oswald:400,300,700|Raleway:400,100,200,300,600,500,700,800,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/color.css" rel="stylesheet">
-	<script src="js/modernizr.custom.js"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52837695-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head><!--/head-->
 
 <body data-spy="scroll" data-target=".scrollspy" data-offset="148">
@@ -60,7 +69,7 @@
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="about.html">About IEEE</a></li>
-										<li><a href="about.html#aboutsb">About IEEE GGSIPU</a></li>
+										<li><a href="about.html#aboutsb">About IEEE USICT</a></li>
 										<li><a href="about.html#vision">Our Vision</a></li>
 										<li><a href="about.html#benefits">Benefits</a></li>
 									</ul>
@@ -79,8 +88,9 @@
 										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
-			                    <li><a href="join.html">Join us</a></li>       
-			                    <li><a href="contact.html">Contact</a></li>       
+			                    <li><a href="join.html">Join us</a></li> 
+			                    <li><a href="contact.html">Contact us</a></li>       
+			                           
 			                </ul>
 			            </div>
 			        </div>
@@ -119,32 +129,32 @@
 					<div class="col-sm-9 col-xs-12">
 						<div class="tab-content">
 							<section class="tab-pane fade in active" id="issue4" role="tabpanel" aria-labelledBy="issue4-tab">
-								<div class="page-header"><h3>Issue 4<!-- <small><date>12th March, 2015</date></small> --></h3></div>
-								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="page-header"><h3>Issue 4</h3></div>
+								<p>TechVeda is bi-annual newsletter of IEEE USICT whose aim is to provide students a platform to enhance technical and content writing skills, an opportunity to challenge their designing skills, a hub to showcase and speak about their hobby projects and to cater as a medium to communicate and share knowledge, experience and tips.</p>
 								<div class="embed-responsive embed-responsive-4by3">
 									<div data-configid="16675146/12258204" class="issuuembed"></div>
 								</div>
 								<div class="hr"></div>
 							</section>
 							<section class="tab-pane fade in" id="issue3" role="tabpanel" aria-labelledBy="issue3-tab">
-								<div class="page-header"><h3>Issue 3 <!-- <small><date>5th February, 2015</date></small> --></h3></div>
-								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="page-header"><h3>Issue 3</h3></div>
+								<p>TechVeda is bi-annual newsletter of IEEE USICT whose aim is to provide students a platform to enhance technical and content writing skills, an opportunity to challenge their designing skills, a hub to showcase and speak about their hobby projects and to cater as a medium to communicate and share knowledge, experience and tips.</p>
 								<div class="embed-responsive embed-responsive-4by3">
 									<div data-configid="16675146/12258374" class="issuuembed"></div>
 								</div>
 								<div class="hr"></div>
 							</section>
 							<section class="tab-pane fade in" id="issue2" role="tabpanel" aria-labelledBy="issue2-tab">
-								<div class="page-header"><h3>Issue 2 <!-- <small><date>5th February, 2015</date></small> --></h3></div>
-								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="page-header"><h3>Issue 2</h3></div>
+								<p>TechVeda is bi-annual newsletter of IEEE USICT whose aim is to provide students a platform to enhance technical and content writing skills, an opportunity to challenge their designing skills, a hub to showcase and speak about their hobby projects and to cater as a medium to communicate and share knowledge, experience and tips.</p>
 								<div class="embed-responsive embed-responsive-4by3">
 									<div data-configid="16675146/12258391" class="issuuembed"></div>
 								</div>
 								<div class="hr"></div>
 							</section>
 							<section class="tab-pane fade in" id="issue1" role="tabpanel" aria-labelledBy="issue1-tab">
-								<div class="page-header"><h3>Issue 1 <!-- <small><date>5th February, 2015</date></small> --></h3></div>
-								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="page-header"><h3>Issue 1</h3></div>
+								<p>TechVeda is bi-annual newsletter of IEEE USICT whose aim is to provide students a platform to enhance technical and content writing skills, an opportunity to challenge their designing skills, a hub to showcase and speak about their hobby projects and to cater as a medium to communicate and share knowledge, experience and tips.</p>
 								<div class="embed-responsive embed-responsive-4by3">
 									<div data-configid="16675146/12258397" class="issuuembed"></div>
 								</div>
@@ -172,7 +182,7 @@
 							<h3>Get in touch</h3>
 						</div>
 						<address>
-						  <strong>IEEE GGSIPU</strong><br>
+						  <strong>IEEE USICT</strong><br>
 						 Guru Gobind Singh Indraprastha University<br>
 						 Sector - 16C Dwarka<br>
 						 Delhi - 110078, India<br>
@@ -203,9 +213,9 @@
 				<hr>	
 				<div class="row">
 					<ul class="list-inline">
-						<li><a href="">Home</a></li>|
-						<li><a href="">Sitemap</a></li>|
-						<li><a href="">Contact</a></li>
+						<li><a href="index.html">Home</a></li>|
+						<li><a href="sitemap.html">Sitemap</a></li>|
+						<li><a href="contact.html">Contact us</a></li>
 						<li class="pull-right">Designed and Developed by <a href="http://www.shubhamja.in" target="_blank">Shubham Jain</a></li>
 					</ul>
 					
